--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           	<h1>Attorneys Fighting For Your 
 						  <span
 						     class="txt-rotate"
-						     data-period="2000"
+						     data-period="4000"
 						     data-rotate='[ "Freedom.", "Rights.", "Case.", "Custody." ]'></span>
 						</h1>
             <!-- <h1 class="mb-4">Attorneys Fighting For Your Freedom</h1> -->
@@ -604,8 +604,8 @@
               <div class="opening-hours">
               	<h4>Opening Days:</h4>
               	<p class="pl-3">
-              		<span>Monday – Friday : 9am to 20 pm</span>
-              		<span>Saturday : 9am to 17 pm</span>
+              		<span>Monday – Friday : 9am to 5 pm</span>
+              		<span>Saturday : 9am to 2pm pm</span>
               	</p>
               	<h4>Vacations:</h4>
               	<p class="pl-3">
@@ -618,10 +618,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 text-center">
-
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+  Copyright &copy; CM KINGORI & CO.ADVOCATES <script>document.write(new Date().getFullYear());</script> All rights reserved
           </div>
         </div>
       </div>
